--- a/Sentimental_Analysis_for_IMDB_dataset_using_Keras.ipynb
+++ b/Sentimental_Analysis_for_IMDB_dataset_using_Keras.ipynb
@@ -3,7 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyOWfr7XnD1lXLDJx+P39anO",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/myang0413/Mini_Projects/blob/main/Sentimental_Analysis_for_IMDB_dataset_using_Keras.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "execution_count": null,
@@ -157,7 +169,7 @@
       "metadata": {
         "id": "kBgUkR4XWE4_"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -185,7 +197,7 @@
         "id": "ObQ4c0_YWwgj",
         "outputId": "27c19a23-e04e-43e6-8b42-ad132a929982"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -256,7 +268,7 @@
         "id": "TpebeRxCXKBb",
         "outputId": "46e58071-a51a-446d-ba68-d051962150d6"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
