--- a/Sentimental_Analysis_for_IMDB_dataset_using_Keras.ipynb
+++ b/Sentimental_Analysis_for_IMDB_dataset_using_Keras.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOWfr7XnD1lXLDJx+P39anO",
+      "authorship_tag": "ABX9TyN24zLMmjgH5TcJPbjHWMH0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,15 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/myang0413/Mini_Projects/blob/main/Sentimental_Analysis_for_IMDB_dataset_using_Keras.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Importing necessary libraries and default setting"
+      ],
+      "metadata": {
+        "id": "dqu961cuh8_r"
+      }
     },
     {
       "cell_type": "code",
@@ -48,7 +57,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Build the model in Functional API Style"
+        "## Build the model in Functional API Style"
       ],
       "metadata": {
         "id": "-jBcA6ACT91b"
@@ -104,7 +113,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Importing the IMDB dataset"
+        "## Importing the IMDB dataset"
       ],
       "metadata": {
         "id": "dlDePQtEU7wS"
@@ -143,7 +152,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Optimize the function"
+        "## Optimize the function"
       ],
       "metadata": {
         "id": "Ge4kq5Mdfdsi"
@@ -175,7 +184,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Model fitting and running"
+        "## Model fitting and running"
       ],
       "metadata": {
         "id": "G7wegq6efmKh"
@@ -250,7 +259,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Model Evaluation"
+        "## Model Evaluation"
       ],
       "metadata": {
         "id": "wx23ha5kgRUa"
