--- a/Sentimental_Analysis_for_IMDB_dataset_using_Keras.ipynb
+++ b/Sentimental_Analysis_for_IMDB_dataset_using_Keras.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN24zLMmjgH5TcJPbjHWMH0",
+      "authorship_tag": "ABX9TyP7/g8ZV8z8CuEkg9vgpPD5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -197,7 +197,7 @@
         "        batch_size=256,\n",
         "        epochs=15,\n",
         "        verbose=1,\n",
-        "        validation_data=(X_test,y_te  st))"
+        "        validation_data=(X_test,y_test))"
       ],
       "metadata": {
         "colab": {
@@ -268,7 +268,7 @@
     {
       "cell_type": "code",
       "source": [
-        "mod.evaluate(X_test,y_test)"
+        "mod.evaluate(X_test,y_test) #The accuracy rate is 86%"
       ],
       "metadata": {
         "colab": {
